@@ -2,9 +2,9 @@
 
 from distutils.core import setup
 
-setup(name='pykickstart', version='0.95',
+setup(name='pykickstart', version='0.96',
       description='Python module for manipulating kickstart files',
       author='Chris Lumens', author_email='clumens@redhat.com',
       url='http://fedoraproject.org/wiki/pykickstart',
       scripts=['validator/ksvalidator'],
-      packages=['pykickstart', 'pykickstart.commands'])
+      packages=['pykickstart', 'pykickstart.commands', 'pykickstart.handlers'])
